opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/ppx_custom_printf"
bug-reports: "https://github.com/janestreet/ppx_custom_printf/issues"
dev-repo: "git+https://github.com/janestreet/ppx_custom_printf.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "base"
  "ppx_sexp_conv"
  "jbuilder"                {build & >= "1.0+beta18.1"}
  "ocaml-migrate-parsetree" {>= "1.0"}
  "ppxlib"                  {>= "0.1.0"}
]
available: [ ocaml-version >= "4.04.2" ]
descr: "
Printf-style format-strings for user-defined string conversion

Part of the Jane Street's PPX rewriters collection.
"
