opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/ppx_custom_printf"
bug-reports: "https://github.com/janestreet/ppx_custom_printf/issues"
dev-repo: "git+https://github.com/janestreet/ppx_custom_printf.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/ppx_custom_printf/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "base"
  "ppx_sexp_conv"
  "dune"          {>= "3.17.0"}
  "ppxlib"        {= "0.33.0+ox"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Printf-style format-strings for user-defined string conversion"
description: "
Part of the Jane Street's PPX rewriters collection.
"
